# Andriod

app/: build.gradle
app/src/androidTest/java/kuklinski/kamil/game/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shaders/: line_shader_f  triangle_shader_f  triangle_shader_fragment  triangle_shader_v  triangle_shader_vertex
app/src/main/cpp/: Ball.cpp  Ball.h  BallDescription.cpp  BallDescription.h  Board.cpp  Board.h  BoardDescription.cpp  BoardDescription.h  Boundary.cpp  Boundary.h  BoundaryDescription.cpp  BoundaryDescription.h  Brick.cpp  Brick.h  BrickDescription.cpp  BrickDescription.h  CMakeLists.txt  CppToJavaWrapper.cpp  CppToJavaWrapper.h  GameScene.cpp  GameScene.h  LetterBase.cpp  LetterBase.h  LineDrawing.cpp  LineDrawing.h  LineShader.cpp  LineShader.h  LineText.cpp  LineText.h  LineTextDescription.cpp  LineTextDescription.h  ModelDescriptionInterface.cpp  ModelDescriptionInterface.h  ModelInterface.cpp  ModelInterface.h  Number.cpp  Number.h  NumberBase.cpp  NumberBase.h  NumberDescription.cpp  (+16 more)
app/src/main/java/kuklinski/kamil/game/: IntroActivity.java  JavaToCppWrapper.java  MyView.java  SmasherCPP.java
app/src/test/java/kuklinski/kamil/game/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
